Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-27816

Server fails to load a dump, taken on the same version

    XMLWordPrintable

Details

    Description

      A dump was taken on a system that has PL/SQL packages with the below version and command.

      -- MariaDB dump 10.19  Distrib 10.6.4-1-MariaDB, for Linux (x86_64)
      

      mysqldump my_schema_name -R -e --triggers --single-transaction
      

      The dump contains the following line:

      /*!50003 DROP PACKAGE IF EXISTS `SomePackageName` */;
      

      Loading the dump into a blank schema on another MariaDB server of the same version and default config (incl. default SQL mode) fails:

      ERROR 1064 (42000) at line 5745: You have an error in your SQL syntax; check the manual that corresponds to your MariaDB server version for the right syntax to use near 'PACKAGE IF EXISTS `SomePackageName` */' at line 1
      

      The dump seems to set up the proper mode for most of what is does, like CREATE PACKAGE statements - but it fails on the above comment. Here is a line form the dump which sets the SQL mode to include Oracle (found multiple times inside the dump).

      /*!50003 SET sql_mode = 'PIPES_AS_CONCAT,ANSI_QUOTES,IGNORE_SPACE,ORACLE,NO_KEY_OPTIONS,NO_TABLE_OPTIONS,NO_FIELD_OPTIONS,NO_AUTO_CREATE_USER,SIMULTANEOUS_ASSIGNMENT' */ ;
      

      Attachments

        Activity

          People

            danblack Daniel Black
            assen.totin Assen Totin (Inactive)
            Votes:
            1 Vote for this issue
            Watchers:
            9 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 3h 20m
                3h 20m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.